--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ env_logger = "0.8.3"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.6.4", features = ["full"] }
-diesel = { version = "1.4.6", features = ["postgres", "numeric", "64-column-tables"] }
+diesel = { version = "1.4.6", features = ["postgres", "numeric", "64-column-tables", "r2d2"] }
 dotenv = "0.15.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
