--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,7 @@ actix-web = "3"
 actix-files = "0.5.0"
 diesel_migrations = "1.4.0"
 clap = "3.0.0-beta.2"
+[profile.release]
+lto = true
+codegen-units = 1
+opt-level = 3
