--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,12 @@ instant = "0.1.9"
 regex = "1"
 base64 = "0.13.0"
 base32 = "0.4.0"
-actix-web = "3"
-actix-files = "0.5.0"
+actix-web = "4.0.0-BETA.4"
+actix-files = "0.6.0-beta.3"
 diesel_migrations = "1.4.0"
 clap = "3.0.0-beta.2"
+handlebars = { version = "3.0.0", features = ["dir_source"] }
+
 [profile.release]
 lto = true
 codegen-units = 1
