String shortening in templates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ actix-files = "0.6.0-beta.3"
 diesel_migrations = "1.4.0"
 clap = "3.0.0-beta.2"
 handlebars = { version = "3.0.0", features = ["dir_source"] }
+unicode-truncate = "0.2.0"
 
 [profile.release]
 lto = true
