--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ diesel_migrations = "1.4.0"
 clap = "3.0.0-beta.2"
 handlebars = { version = "3.0.0", features = ["dir_source"] }
 unicode-truncate = "0.2.0"
+handlebars_misc_helpers = "0.11.2"
 
 [profile.release]
 lto = true
