--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://user:password@127.0.0.1/mitsuba
+DATABASE_URI=postgres://user:password@127.0.0.1/mitsuba
 RUST_LOG="info"
 RUST_BACKTRACE=0
 RATE_LIMIT_QUOTA_PER_MINUTE=120
@@ -7,3 +7,5 @@ RATE_LIMIT_JITTER_MIN_MS=200
 RATE_LIMIT_JITTER_INTERVAL_MS=800
 RETRY_FAILED_MAX_TIME_SECONDS=600
 DATA_ROOT="data"
+WEB_PORT="8080"
+WEB_IP="127.0.0.1"
