--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ handlebars = { version = "3.0.0", features = ["dir_source"] }
 unicode-truncate = "0.2.0"
 handlebars_misc_helpers = "0.11.2"
 sqlx = { version = "0.5", features = [ "postgres", "macros", "migrate", "runtime-tokio-rustls", "offline" ] }
+rust-embed = "5.9.0"
+mime_guess = "2.0.3"
 
 [profile.release]
 lto = true
