--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ sqlx = { version = "0.5", features = [ "postgres", "macros", "migrate", "runtime
 rust-embed = "5.9.0"
 mime_guess = "2.0.3"
 sha2 = "0.9.3"
+rust-s3 = "=0.27.0-beta11"
 
 [profile.release]
 lto = true
