--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
-DATABASE_URI=postgres://user:password@127.0.0.1/mitsuba
-RUST_LOG="info"
+DATABASE_URL=postgres://user:password@127.0.0.1/mitsuba
+RUST_LOG=mitsuba=info
 RUST_BACKTRACE=0
 RATE_LIMIT_QUOTA_PER_MINUTE=120
 RATE_LIMIT_BURST=10
@@ -9,3 +9,9 @@ RETRY_FAILED_MAX_TIME_SECONDS=600
 DATA_ROOT="data"
 WEB_PORT="8080"
 WEB_IP="127.0.0.1"
+ENABLE_S3_STORAGE="true"
+S3_BUCKET="bucket"
+S3_ENDPOINT="http://127.0.0.1:9000"
+S3_ACCESS_KEY_ID="minioadmin"
+S3_SECRET_ACCESS_KEY="minioadmin"
+S3_REGION="us-east-1"
