--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ rust-embed = "5.9.0"
 mime_guess = "2.0.3"
 sha2 = "0.9.3"
 rust-s3 = "=0.27.0-beta11"
+dashmap = "4.0.2"
 
 [profile.release]
 lto = true
