--- a/example.env
+++ b/example.env
@@ -15,3 +15,4 @@ S3_ENDPOINT="http://127.0.0.1:9000"
 S3_ACCESS_KEY_ID="minioadmin"
 S3_SECRET_ACCESS_KEY="minioadmin"
 S3_REGION="us-east-1"
+HOME_PAGE_BOARDS=po,vip
