--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.8.0"
 authors = ["reasv", "moot"]
 edition = "2018"
 license = "AGPL-3.0"
-keywords = ["web", "archive", "4chan", "download", "downloader", "crawler"]
+keywords = ["web", "archive", "download", "downloader", "crawler"]
 repository = "https://github.com/reasv/mitsuba"
 readme = "readme.md"
 categories  = ["web-programming::http-server"]
