--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ mime_guess = "2.0.3"
 sha2 = "0.9.3"
 rust-s3 = "=0.27.0-beta11"
 dashmap = "4.0.2"
+weighted-rs = "0.1.2"
 
 [profile.release]
 lto = true
