--- a/example.env
+++ b/example.env
@@ -16,3 +16,9 @@ S3_ACCESS_KEY_ID="minioadmin"
 S3_SECRET_ACCESS_KEY="minioadmin"
 S3_REGION="us-east-1"
 HOME_PAGE_BOARDS=po,vip
+PROXY_URL_0=socks5://user:password@example.com:1337
+PROXY_URL_1=socks5://user:password@10.0.0.2:1337
+PROXY_WEIGHT_0=5
+PROXY_WEIGHT_1=1
+PROXY_ONLY=false
+PROXY_WEIGHT_SELF=2
