--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,7 +4,7 @@ on:
   push:
     # Publish `$default-branch` as Docker `latest` image.
     branches:
-      - $default-branch
+      - master
 
     # Publish `v1.2.3` tags as releases.
     tags:
