--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   mitsuba:
-    image: docker.pkg.github.com/reasv/mitsuba/mitsuba:master
+    image: mitsuba/mitsuba:latest
     container_name: "mitsuba"
     restart: always
     command: "./mitsuba start"
