--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ weighted-rs = "0.1.2"
 metrics = "0.14.2"
 metrics-exporter-prometheus = "0.3.0"
 futures = "0.3.14"
+log4rs = "1.0.0"
 
 [profile.release]
 lto = true
