--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,29 @@
 [package]
 name = "mitsuba"
 version = "1.10.0"
-authors = ["reasv", "moot"]
-edition = "2018"
+authors = ["reasv", "moot", "cerda"]
+edition = "2021"
 license = "AGPL-3.0"
 keywords = ["web", "archive", "download", "downloader", "crawler"]
 repository = "https://github.com/reasv/mitsuba"
 readme = "readme.md"
-categories  = ["web-programming::http-server"]
+categories = ["web-programming::http-server"]
 description = "Lightweight 4chan board archive software (like Foolfuuka), in Rust"
-exclude = [
-    "data/*",
-]
+exclude = ["data/*"]
 
 [dependencies]
 log = "0.4.14"
 env_logger = "0.8.3"
-reqwest = { version = "0.11", features = ["json", "rustls-tls"],  default-features = false }
+reqwest = { version = "0.11", features = [
+    "json",
+    "rustls-tls",
+], default-features = false }
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.6.4", features = ["full"] }
 dotenv = "0.15.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-nonzero_ext = "0.2.0"
+nonzero_ext = "0.3.0"
 anyhow = "1.0.38"
 lazy_static = "1.4.0"
 governor = "0.3.2"
@@ -32,23 +33,34 @@ instant = "0.1.9"
 regex = "1"
 base64 = "0.13.0"
 base32 = "0.4.0"
-actix-web = {version = "4.0.0-BETA.4", features = ["rustls"]}
+actix-web = { version = "4.0.0-BETA.4", features = ["rustls"] }
 actix-files = "0.6.0-beta.3"
 clap = "3.0.0-beta.2"
-handlebars = { version = "3.0.0", features = ["dir_source"] }
+handlebars = { version = "4.1.6", features = ["dir_source"] }
 unicode-truncate = "0.2.0"
-handlebars_misc_helpers = {version = "0.11.2", features = ["string", "json"], default-features = false }
-sqlx = { version = "0.5", features = [ "postgres", "macros", "migrate", "runtime-tokio-rustls", "offline" ] }
+handlebars_misc_helpers = { version = "0.12.1", features = [
+    "string",
+    "json",
+], default-features = false }
+sqlx = { version = "0.5", features = [
+    "postgres",
+    "macros",
+    "migrate",
+    "runtime-tokio-rustls",
+    "offline",
+] }
 rust-embed = "5.9.0"
 mime_guess = "2.0.3"
-sha2 = "0.9.3"
-rust-s3 = { version = "=0.27.0-beta11", features = ["tokio-rustls-tls"], default-features = false}
-dashmap = "4.0.2"
-weighted-rs = "0.1.2"
-metrics = "0.14.2"
-metrics-exporter-prometheus = "0.3.0"
-futures = "0.3.14"
-log4rs = "1.0.0"
+sha2 = "0.10.0"
+rust-s3 = { version = "=0.27.0-beta11", features = [
+    "tokio-rustls-tls",
+], default-features = false }
+dashmap = "5.0.0"
+weighted-rs = "0.1.3"
+metrics = "0.17.0"
+metrics-exporter-prometheus = "0.6.1"
+futures = "0.3"
+log4rs = "1"
 
 [profile.release]
 lto = true
