--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,42 +14,42 @@ exclude = [
 ]
 
 [dependencies]
-log = "0.4"
+log = "0.4.17"
 env_logger = "0.9.0"
-reqwest = { version = "0.11", features = ["json", "rustls-tls"],  default-features = false }
-tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11.10", features = ["json", "rustls-tls"], default-features = false }
+tokio = { version = "1.18.2", features = ["full"] }
 #tokio-util = { version = "0.6.4", features = ["full"] }
-dotenv = "0"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+dotenv = "0.15.0"
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
 nonzero_ext = "0.3.0"
-anyhow = "1"
-governor = "0.4.0"
-bytes = "1"
+anyhow = "1.0.57"
+governor = "0.4.2"
+bytes = "1.1.0"
 backoff = { version = "0.4.0", features = ["tokio"] }
 instant = "0.1.12"
-regex = "1"
-base64 = "0"
-base32 = "0"
-actix-web = { version = "4.0.0-beta.21", features = ["rustls"] }
-actix-files = "0.6.0-beta.15"
-clap = { version = "3", features = ["derive"] }
-clap_derive = "3"
-handlebars = { version = "4", features = ["dir_source"] }
-unicode-truncate = "0"
-handlebars_misc_helpers = {version = "0.12", features = ["string", "json"], default-features = false }
-sqlx = { version = "0.5", features = [ "postgres", "macros", "migrate", "runtime-tokio-rustls", "offline" ] }
-rust-embed = "5.9.0"
+regex = "1.5.5"
+base64 = "0.13.0"
+base32 = "0.4.0"
+actix-web = { version = "4.0.1", features = ["rustls"] }
+actix-files = "0.6.0"
+clap = { version = "3.1.18", features = ["derive"] }
+clap_derive = "3.1.18"
+handlebars = { version = "4.2.2", features = ["dir_source"] }
+unicode-truncate = "0.2.0"
+handlebars_misc_helpers = { version = "0.12.1", features = ["string", "json"], default-features = false }
+sqlx = { version = "0.5.13", features = [ "postgres", "macros", "migrate", "runtime-tokio-rustls", "offline" ] }
+rust-embed = "6.4.0"
 #mime_guess = "2.0.3"
-new_mime_guess = "4.0.0"
-sha2 = "0.10.1"
-rust-s3 = { version = "0.28.0", features = ["tokio-rustls-tls"], default-features = false }
-dashmap = "5.0.0"
+new_mime_guess = "4.0.1"
+sha2 = "0.10.2"
+rust-s3 = { version = "0.31.0", features = ["tokio-rustls-tls"], default-features = false }
+dashmap = "5.3.3"
 weighted-rs = "0.1.3"
-metrics = "0.17.1"
-metrics-exporter-prometheus = "0.7.0"
-futures = "0.3"
-log4rs = "1"
+metrics = "0.18.1"
+metrics-exporter-prometheus = "0.9.0"
+futures = "0.3.21"
+log4rs = "1.1.1"
 
 [profile.release]
 lto = true
