--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mitsuba"
 version = "1.11.0"
-authors = ["reasv", "cerda <cerdamods@protonmail.com>", "moot"]
+authors = ["reasv", "cerda", "moot"]
 edition = "2021"
 license = "AGPL-3.0"
 keywords = ["web", "archive", "download", "downloader", "crawler"]
