--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "8085:8080"
       - "9025:9000"
     environment:
-      - "DATA_ROOT=/home/mitsuba/data"
+      - "DATA_ROOT=/data"
       - "RUST_LOG=mitsuba=info"
       - "DATABASE_URL=postgres://mitsuba:postgres1@db/mitsuba"
   db:
