--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ exclude = [
 [dependencies]
 log = "0.4.17"
 env_logger = "0.9.0"
-reqwest = { version = "0.11.10", features = ["json", "rustls-tls"], default-features = false }
+reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "http2"], default-features = false }
 tokio = { version = "1.18.2", features = ["full"] }
 #tokio-util = { version = "0.6.4", features = ["full"] }
 dotenv = "0.15.0"
