--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,42 +14,42 @@ exclude = [
 ]
 
 [dependencies]
-log = "0.4.17"
-env_logger = "0.9.0"
+log = "0.4.22"
+env_logger = "0.11.3"
 reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "http2"], default-features = false }
 tokio = { version = "1.38.0", features = ["full"] }
 #tokio-util = { version = "0.6.4", features = ["full"] }
 dotenv = "0.15.0"
 serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.81"
+serde_json = "1.0.119"
 nonzero_ext = "0.3.0"
-anyhow = "1.0.57"
-governor = "0.4.2"
-bytes = "1.1.0"
+anyhow = "1.0.86"
+governor = "0.6.3"
+bytes = "1.6.0"
 backoff = { version = "0.4.0", features = ["tokio"] }
-instant = "0.1.12"
-regex = "1.5.5"
-base64 = "0.13.0"
-base32 = "0.4.0"
+instant = "0.1.13" # Unmaintained
+regex = "1.10.5"
+base64 = "0.22.1"
+base32 = "0.5.0"
 actix-web = { version = "4.8.0", features = ["rustls"] }
 actix-files = "0.6.6"
 clap = { version = "3.1.18", features = ["derive"] }
 clap_derive = "3.1.18"
 handlebars = { version = "4.2.2", features = ["dir_source"] }
-unicode-truncate = "0.2.0"
+unicode-truncate = "1.0.0"
 handlebars_misc_helpers = { version = "0.12.1", features = ["string", "json"], default-features = false }
 sqlx = {  version = "0.7.4", features = [ "postgres", "macros", "migrate", "runtime-tokio"] }
-rust-embed = "6.4.0"
+rust-embed = "8.4.0"
 #mime_guess = "2.0.3"
 new_mime_guess = "4.0.1"
-sha2 = "0.10.2"
+sha2 = "0.10.8"
 rust-s3 = { version = "0.33.0", features = ["tokio-rustls-tls"], default-features = false }
-dashmap = "5.3.3"
+dashmap = "6.0.1"
 weighted-rs = "0.1.3"
 metrics = "0.18.1"
 metrics-exporter-prometheus = "0.9.0"
-futures = "0.3.21"
-log4rs = "1.1.1"
+futures = "0.3.30"
+log4rs = "1.3.0"
 
 [profile.release]
 lto = true
