--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ metrics-exporter-prometheus = "0.9.0" # Not up to date
 futures = "0.3.30"
 log4rs = "1.3.0"
 argon2 = "0.5.3"
+rand = "0.8.5"
 
 [profile.release]
 lto = true
