--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ futures = "0.3.30"
 log4rs = "1.3.0"
 argon2 = "0.5.3"
 rand = "0.8.5"
+percent-encoding = "2.3.1"
 
 [profile.release]
 lto = true
